fixed London and changed images
London image was too big for background, substituted

--- a/stylesheets/linkpage.css
+++ b/stylesheets/linkpage.css
@@ -28,9 +28,7 @@ h1 {
     margin-bottom: 0em;
 }
 /*----------- Container -------------*/
-#containerMilan {
-  width:auto;   
-  }
+
 #container {
     background: url(https://cdn.theatlantic.com/assets/media/img/photo/2014/03/st-petersburg-from-above/s01_00SPB008/main_900.jpg?1420504465) no-repeat;
     background-size: cover;
@@ -41,6 +39,15 @@ h1 {
 }
 #containerMilan {
     background: url(http://tripandtravelblog.com/wp-content/uploads/2011/10/Milan-by-night-Italy.jpg) no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    z-index: 1;
+    margin-bottom: 50px;
+    padding: 0px 0px 30px 0px;
+}
+
+#containerLondon {
+    background: url(http://wallpapers-best.com/uploads/posts/2015-10/17_london.jpg) no-repeat;
     background-size: cover;
     background-attachment: fixed;
     z-index: 1;
@@ -87,38 +94,13 @@ h1 {
   margin: 50px 0px 20px 0px;
  text-align: center;
 }
-.picture1 {
-  width: 33%;
-  background:
-    url(http://www.visit-petersburg.ru/media/uploads/album/151/978_detail_page.jpg) no-repeat;
-    background-size: cover;
-  color:black;
-  padding: 120px 200px 120px 200px;
-  margin: 50px 0px 20px 0px;
-}
-.picture2 {
-  width: 33%;
-  background:
-    url(https://d13yacurqjgara.cloudfront.net/users/724070/screenshots/2434544/freedom-anticafe_1x.png) no-repeat;
-    background-size: cover;
-  color:black;
-  padding: 120px 200px 120px 200px;
-  margin: 50px 0px 20px 0px;
-}
-.picture3  {
-  width: 33%;
-  background:
-    url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTjprGO6Z9S9mKQJa2NsKksOkskbgeSmcEt-kda9DNvqmWagqjj) no-repeat;
-    background-size: cover;
-  color:black;
-  padding: 120px 200px 120px 200px;
-  margin: 50px 0px 20px 0px;
-}
+
 .picture1milan {
   width: 33%;
   background:
-    url(http://i1144.photobucket.com/albums/o496/EndriHasanaj/NaviglioGrandeMilanocanals.jpg) no-repeat;
-    background-size: cover;
+  url(http://i1144.photobucket.com/albums/o496/EndriHasanaj/NaviglioGrandeMilanocanals.jpg) no-repeat;
+  background-size: cover;
+  background-position: center center;
   color:black;
   padding: 120px 200px 120px 200px;
   margin: 50px 0px 20px 0px;
@@ -126,8 +108,9 @@ h1 {
  .picture2milan {
   width: 33%;
   background:
-    url(http://www.blocal-travel.com/wp-content/uploads/2015/04/street-art-isola-Milan.jpg) no-repeat;
-    background-size: cover;
+  url(http://www.blocal-travel.com/wp-content/uploads/2015/04/street-art-isola-Milan.jpg) no-repeat;
+  background-size: cover;
+  background-position: center center;
   color:black;
   padding: 120px 200px 120px 200px;
   margin: 50px 0px 20px 0px;
@@ -135,8 +118,9 @@ h1 {
  .picture3milan {
   width: 33%;
   background:
-    url(http://d1wl13ohcvociy.cloudfront.net/wp-content/uploads/2014/09/03.jpg) no-repeat;
-    background-size: cover;
+  url(http://d1wl13ohcvociy.cloudfront.net/wp-content/uploads/2014/09/03.jpg) no-repeat;
+  background-size: cover;
+  background-position: center center;
   color:black;
   padding: 120px 200px 120px 200px;
   margin: 50px 0px 20px 0px;
@@ -145,12 +129,73 @@ h1 {
  .picture4milan {
   width: 33%;
   background:
-    url(http://www.feeltheyarn.it/wp-content/uploads/2012/11/arengario_milano.jpg) no-repeat;
-    background-size: cover;
+  url(http://www.feeltheyarn.it/wp-content/uploads/2012/11/arengario_milano.jpg) no-repeat;
+  background-size: cover;
+  background-position: center center;
   color:black;
   padding: 120px 200px 120px 200px;
   margin: 50px 0px 20px 0px;
 }
+.picture1stpet {
+  width: 33%;
+  background:
+  url(http://www.visit-petersburg.ru/media/uploads/album/151/978_detail_page.jpg) no-repeat;
+  background-size: cover;
+  color:black;
+  padding: 120px 200px 120px 200px;
+  margin: 50px 0px 20px 0px;
+}
+ .picture2stpet {
+  width: 33%;
+  background:
+  url(https://d13yacurqjgara.cloudfront.net/users/724070/screenshots/2434544/freedom-anticafe_1x.png) no-repeat;
+  background-size:cover;
+  background-position: center center;
+  color:black;
+  padding: 120px 200px 120px 200px;
+  margin: 50px 0px 20px 0px;
+}
+ .picture3stpet {
+  width: 33%;
+  background:
+  url(http://www.friendsplace.ru/public/images/wysiwyg_upload/page_81/bermudy.jpg) no-repeat;
+  background-size: cover;
+  background-position: center center;
+  color:black;
+  padding: 120px 200px 120px 200px;
+  margin: 50px 0px 20px 0px;
+}
+.picture1london {
+  width: 33%;
+  background:
+  url(http://www.visit-petersburg.ru/media/uploads/album/151/978_detail_page.jpg) no-repeat;
+  background-size: cover;
+  background-position: center center;
+  color:black;
+  padding: 120px 200px 120px 200px;
+  margin: 50px 0px 20px 0px;
+}
+ .picture2london {
+  width: 33%;
+  background:
+  url(https://d13yacurqjgara.cloudfront.net/users/724070/screenshots/2434544/freedom-anticafe_1x.png) no-repeat;
+  background-size: cover;
+  background-position: center center;
+  color:black;
+  padding: 120px 200px 120px 200px;
+  margin: 50px 0px 20px 0px;
+}
+ .picture3london {
+  width: 33%;
+  background:
+  url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTjprGO6Z9S9mKQJa2NsKksOkskbgeSmcEt-kda9DNvqmWagqjj) no-repeat;
+  background-size: cover;
+  background-position: center center;
+  color:black;
+  padding: 120px 200px 120px 200px;
+  margin: 50px 0px 20px 0px;
+}
+
 h2 {
     font-family: 'Amatic SC', cursive;
     font-size: 70px;
